--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
     <!-- GIF TOMATAZO -->
     <img class="tomate" id="tomateGif"
-      src="https://media.giphy.com/media/3o6Zt481isNVuQI1l6/giphy.gif"
+      src="https://media1.tenor.com/images/848757085a472217609be5186f039e9b/tenor.gif?itemid=11799779"
       alt="tomatazo">
   </div>
 
