--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
     <!-- GIF TOMATAZO -->
     <img class="tomate" id="tomateGif"
-      src="https://media1.tenor.com/images/848757085a472217609be5186f039e9b/tenor.gif?itemid=11799779"
+      src="https://c.tenor.com/C0Gy42t5mJEAAAAC/tenor.gif"
       alt="tomatazo">
   </div>
 
