--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
     <h2>¿Quieres ser mi novia?</h2>
 
     <div class="buttons">
-      <button class="yes" onclick="decirSi()">Sí 💖</button>
-      <button class="no" id="noBtn" onclick="decirNo()" onmouseover="moverNo()">No 🙈</button>
+      <button class="yes" onclick="decirSi()">Si quiero obviamente duh </button>
+      <button class="no" id="noBtn" onclick="decirNo()" onmouseover="moverNo()">Nel pastel </button>
     </div>
 
     <div id="respuesta"></div>
@@ -130,7 +130,7 @@
     function decirSi() {
       const r = document.getElementById("respuesta");
       r.style.display = "block";
-      r.innerHTML = "Sabía que dirías que sí 💗✨ Prometo cuidarte y hacerte muy feliz.";
+      r.innerHTML = "AHUEVOOO, la próxima es la boda (te quiero Katherine)";
       document.getElementById("tomateGif").style.display = "none";
     }
 
@@ -139,7 +139,7 @@
       const t = document.getElementById("tomateGif");
 
       r.style.display = "block";
-      r.innerHTML = "¡Auch! 🍅 Eso dolió… inténtalo otra vez 😏";
+      r.innerHTML = "AYORA, intenta otra vez maldita";
       t.style.display = "block";
 
       moverNo();
