--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
   </div>
 
   <script>
-    function decirSi() {
+    function decirSiquiero obviamente duh() {
       const r = document.getElementById("respuesta");
       r.style.display = "block";
       r.innerHTML = "AHUEVOOO, la próxima es la boda (te quiero Katherine)";
       document.getElementById("tomateGif").style.display = "none";
     }
 
-    function decirNo() {
+    function decirNel pastel() {
       const r = document.getElementById("respuesta");
       const t = document.getElementById("tomateGif");
 
