--- a/index.html
+++ b/index.html
@@ -96,19 +96,18 @@
 
   <div class="card">
     <!-- GIF PRINCIPAL -->
-    <img class="main-gif" src="https://media.giphy.com/media/26ufdipQqU2lhNA4g/giphy.gif" alt="cute gif">
+    <img class="main-gif" src="https://i.pinimg.com/originals/a6/ab/72/a6ab7203c43c02b1c939798c42631be7.gif" alt="cute gif">
 
-    <h1>Oye… 💕</h1>
+    <h1>Katherine... 💕</h1>
 
     <p>
-      Desde que empezamos a hablar,  
-      mis días se sienten distintos.<br>
-      Me haces sonreír sin darme cuenta.
+      Mis días cambiaron desde que te conocí.<br>
+      Me haces sonreír sin darme cuenta, me causas tal felicidad que pierdo la noción del tiempo. 
     </p>
 
     <p>
-      No quiero que esto se quede solo aquí.  
-      Quiero intentarlo contigo, de verdad.
+      Contigo he aprendido lo que es encontrar en una sola persona alguien a quién querer, con quién reír,con quién pelear, con quien compartir momentos especiales.  
+      Contigo quiero hacerlo todo. 
     </p>
 
     <h2>¿Quieres ser mi novia?</h2>
