--- a/index.html
+++ b/index.html
@@ -101,13 +101,8 @@
     <h1>Katherine... 💕</h1>
 
     <p>
-      Mis días cambiaron desde que te conocí. <br>
-      Me haces sonreír sin darme cuenta, me causas tal felicidad que pierdo la noción del tiempo. 
-    </p>
-
-    <p>
-      Contigo he aprendido lo que es encontrar en una sola persona alguien a quién querer, con quién reír,con quién pelear, con quien compartir momentos especiales.  
-      Contigo quiero hacerlo todo. 
+      Has cambiado mi vida y me has enseñado lo que es encontrar en una misma persona alguien a quién querer, con quién pelear, con quién reír hasta que no pueda más.  <br>
+      Eres la causa de mis sonrisas sin siquiera intentarlo. 
     </p>
 
     <h2>¿Quieres ser mi novia?</h2>
