--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <body>
 
   <div class="card">
-    <img class="avatar" src="https://i.imgur.com/1X4WQbA.png">
+    <img class="avatar" src="https://media1.tenor.com/m/qPa9uJo18WcAAAAC/snoopy.gif">
 
     <h1>Katherine… 💕</h1>
 
@@ -164,7 +164,7 @@
       const s = document.getElementById("sound");
 
       r.style.display = "block";
-      r.innerHTML = "ahora intenta otra vez maldita 😈🍅";
+      r.innerHTML = "AYORA intenta otra vez maldita 😈🍅";
       t.style.display = "block";
       s.play();
       moverNo();
