--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Para Katherine 💕</title>
+  <title>Para mi princesa naca pobretona 💕</title>
 
   <!-- CONFETTI -->
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
@@ -106,12 +106,10 @@
   <div class="card">
     <img class="avatar" src="https://media1.tenor.com/m/qPa9uJo18WcAAAAC/snoopy.gif">
 
-    <h1>Katherine… 💕</h1>
+    <h1>Katherine… </h1>
 
     <p>
-      Has cambiado mi vida y me has enseñado lo que es encontrar en una misma
-      persona alguien a quién querer, con quién pelear, con quién reír hasta que
-      no pueda más.
+     Desde que te conocí supe que cambiarías mi vida, contigo encontré todo lo que no sabía que buscaba. Alguien con quién reír, con quién pelear, a quién querer sin temor ni dudas.
     </p>
 
     <p>
